tests/errors/e_bufaccess_pxd.pxd
# See e_bufaccess2.pyx

ctypedef nothing T
